theme.scss
/*-- scss:rules --*/

@import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&family=Maven+Pro:wght@400..900&display=swap');

// . navbar

@media(min-width: 991.98px) {
  #quarto-header {
    border-bottom: 1px solid $grey;
  }
}

.navbar-logo {
  box-shadow: none !important;
  border-radius: 0px !important;
}

.navbar-brand > img {
  max-height: 36px;
}

@media(max-width: 991.98px) {
  .nav-page {
    font-size: 0.1rem !important;
    line-height: 1.1rem !important;
  }
}

.headroom--top {
  display: block;
}

.headroom--not-top {
  display: none;
}

// . sidebar

div.sidebar-item-container:hover,
div.sidebar-item-container:focus {
    color: $red !important;
}

div.sidebar-item-container .active,
div.sidebar-item-container .show>.nav-link,
div.sidebar-item-container .sidebar-link>code {
    color: $red !important;
}

.sidebar nav[role=doc-toc] ul>li>a.active,
.sidebar nav[role=doc-toc] ul>li>ul>li>a.active {
  border-left: 1px solid $red;
  color: $red !important;
}

div.sidebar-item-container .active,
div.sidebar-item-container .show>.nav-link,
div.sidebar-item-container .sidebar-link>code {
  color: $red !important;
}

// . cards and buttons

// .. cards

.card {
  width: 100% !important;
  padding-top: 0.5rem;
  background-color: $white-pink;
  border-radius: 10px;
}

.card:hover {
  background-color: $grey-light;
  a {
    color: $black;
  }
}

.card2 {
  width: 100%;
  background-color: $grey-medium;
  border-radius: 10px;
  border: 1px solid rgba(0, 0, 0, 0.175);
}

.card2:hover {
  background-color: $grey-brown;
  a {
    color: $black;
  }
}

.card-special {
  width: 100% !important;
  background-color: $red-medium;
  color: $white !important;
  border-radius: 10px;
  font-weight: bold;
  font-size: 1rem;
  border: 1px solid rgba(0, 0, 0, 0.175);
  a {
    color: $white;
  }
}

.card-special:hover {
  background-color: $red;
}

.card-title {
  color: $grey-dark;
  font-size: 1.5rem;
  line-height: 1.8rem;
}

.card-title2 {
  color: $grey-dark;
  font-size: 1.2rem;
  line-height: 1.7rem;
  text-decoration: none !important;
}

.card-title3 {
  color: $grey-dark;
  font-size: 1rem;
  line-height: 1.2rem;
  text-decoration: none !important;
}

.card-title3big {
  color: $grey-dark;
  font-size: 1.25rem;
  line-height: 1.6rem;
  text-decoration: none !important;
}

.card-title4 {
  color: $black-soft;
  font-size: 1.1rem;
  line-height: 1.2rem;
  text-decoration: none !important;
}

.card-title-ws {
  color: $grey-dark;
  font-size: 1rem;
  line-height: 1.4rem;
}

.card-body {
  line-height: 1.4rem;
  padding: 0.9rem 1rem 0.2rem 1rem;
}

.card-body2 {
  flex: 1 1 auto;
  -webkit-flex: 1 1 auto;
  padding: 0.9rem 1rem 0.2rem 1rem;
  font-size: 0.95rem;
  line-height: 1rem;
}

.card-body3 {
  flex: 1 1 auto;
  -webkit-flex: 1 1 auto;
  padding: 0.9rem 1rem 0.2rem 1rem;
  font-size: 0.9rem;
  line-height: 1.2rem;
}

// .. buttons

.btn-redirect {
  font-family: 'Crimson Pro', serif;
  font-style: italic;
  line-height: 1.5rem;
  font-size: 1.05rem;
  display: inline-block;
  vertical-align: middle;
  padding: 0.5rem 1rem 0 1rem;
  color: $grey-dark;
}

@media(max-width: 500px) {
  .btn-redirect {
    line-height: 1.3rem;
    font-size: 0.9rem;
    margin: 2rem 0;
  }
}

// . img

img[alt=shadow] {
  box-shadow: 0px 0px 6px rgba(0,0,0,0.3);
}

img {
  border-radius: 3px;
}

img[alt=bgtransparent] {
  box-shadow: none;
  background-color: transparent !important;
}

img[alt=frontlogo] {
  box-shadow: none;
  border-radius: 0;
}

// . boxes

.def {
  background-color: $grey-dull;
  font-family: 'Crimson Pro', serif;
  margin: 2rem 0;
  padding: 1rem 1.8rem 0.3rem 1.8rem;
  line-height: 1.5rem;
  font-size: 1.03rem;
  border: 0.5pt solid $grey-pink;
  border-radius: 5px;
}

.topdef {
  background-color: $white-pink;
  font-family: 'Maven Pro', sans-serif;
  padding: 1rem 1.8rem 0.3rem 1.8rem;
  line-height: 1.3rem;
  font-size: 0.9rem;
  color: $grey-darkish;
  border: 0.5pt solid $grey-pink;
  border-radius: 5px;
  a {
    color: $red;
  }
  a:hover {
    color: $red-dark;
  }
}

.info {
  background-color: $whitish;
  font-family: 'Crimson Pro', serif;
  margin: 2rem 0;
  padding: 1rem 2rem 0.5rem 2rem;
  font-size: 1.05rem;
  border: 1pt solid $blue-light;
  border-radius: 5px;
}

.box {
  font-family: 'Crimson Pro', serif;
  margin: 2rem 0;
  padding: 1rem 1.8rem 0.3rem 1.8rem;
  line-height: 1.3rem;
  font-size: 1.0rem;
  border: 1pt solid $grey-pink;
  border-radius: 5px;
}

.betterbox {
  font-family: 'Crimson Pro', serif;
  margin: 3rem 15rem 3rem 0rem;
  padding: 0.9rem 1rem 0rem 1.4rem;
  line-height: 1.4rem;
  font-size: 1.0rem;
  border: 0.55pt solid $brown-dark;
  border-radius: 5px;
}

@media(max-width: 500px) {
  .def {
    margin: 1.5rem 0;
    padding: 0.7rem 0.7rem 0rem 0.9rem;
    line-height: 1.2rem;
    font-size: 0.78rem;
  }
}

@media(max-width: 500px) {
  .topdef {
    padding: 0.7rem 0.5rem 0rem 0.9rem;
  }
}

@media(max-width: 500px) {
  .box {
    margin: 1.2rem 0;
    padding: 0.8rem 1.5rem 0.1rem 1.4rem;
    font-size: 0.78rem;
  }
}

@media(max-width: 500px) {
  .betterbox {
    margin: 1.5rem 0rem;
    padding: 0.7rem 0.7rem 0rem 0.9rem;
    font-size: 0.78rem;
    line-height: 1.3rem;
  }
}

@media(max-width: 500px) {
  .info {
    margin: 1.2rem 0;
    padding: 0.5rem 0.5rem 0rem 0.8rem;
    font-size: 0.85rem;
  }
}

// . text format

.exo {
  font-family: 'Maven Pro', sans-serif;
  font-size: 0.92rem;
  color: $grey-bluish;
  border-left: 4px solid $orange;
  margin: 2rem 0 2rem 2rem;
  padding-left: 1rem;
}

.exosimple {
  color: $red-orange;
  border-left: 5px solid $orange;
  margin: 45px 50px 45px 20px;
  padding-left: 1.5rem;
  line-height: 2rem;
}

.downloadthis {
  border-radius: 3%;
  font-size: 0.9rem;
  border: none;
  background-color: $grey-brown;
  color: $black;
  padding: 0.2rem 0.4rem;
}
/* ... */

